🏗️ components/ui -> ui

--- a/src/data/posts/developing-browser-extensions-with-nextjs.mdx
+++ b/src/data/posts/developing-browser-extensions-with-nextjs.mdx
@@ -8,7 +8,7 @@ topics: [Next.js]
 repo: demo-nextjs-browser-extension
 ---
 
-import * as Tabs from '@/components/ui/tabs';
+import * as Tabs from '@/ui/tabs';
 
 Although modern browsers offer a plethora of tooling to help assist web development and general productivity, there will
 always be some niche solution(s) not offered. How do we solve this? _Extensions!_
