--- a/src/data/posts/full-text-search-with-astro-db.mdx
+++ b/src/data/posts/full-text-search-with-astro-db.mdx
@@ -6,7 +6,7 @@ topics: [Astro, SQL]
 repo: full-text-search-with-astro-db
 ---
 
-import * as Stepper from '@/components/ui/stepper';
+import * as Stepper from '@/ui/stepper';
 
 [Astro DB][astrojs-db] is a SQL database service created specifically for Astro (`v4.5` or later). One of its goals is
 to provide an API for directly interacting with a SQL database inside an Astro project. This opens up serveral use-cases
