🍱 Blog post banners

--- a/src/content/astro-shiki-syntax-highlighting-with-css-variables.mdx
+++ b/src/content/astro-shiki-syntax-highlighting-with-css-variables.mdx
@@ -4,6 +4,8 @@ description: Customize an Astro project's Shiki syntax highlighting using a list
 published: 2023-01-09
 topics: [Astro, CSS]
 repo: astro-shiki-css-variables
+coverDark: ./astro-shiki-syntax-highlighting-with-css-variables.dark.png
+coverLight: ./astro-shiki-syntax-highlighting-with-css-variables.light.png
 ---
 
 By default, Astro uses [Shiki][shiki] for syntax highlighting markdown code blocks. Astro comes with an array of Shiki
