--- a/src/content/full-text-search-with-astro-db.mdx
+++ b/src/content/full-text-search-with-astro-db.mdx
@@ -4,6 +4,8 @@ description: Leverage Astro DB and SQLite's FTS5 to perform full-text search que
 published: 2024-06-30
 topics: [Astro, SQL]
 repo: full-text-search-with-astro-db
+coverDark: ./full-text-search-with-astro-db.dark.png
+coverLight: ./full-text-search-with-astro-db.light.png
 ---
 
 import * as Stepper from '@/components/stepper';
