--- a/src/content/hyper-terminal-and-its-arsenal-of-plugins.mdx
+++ b/src/content/hyper-terminal-and-its-arsenal-of-plugins.mdx
@@ -3,6 +3,8 @@ title: Hyper Terminal and its arsenal of plugins
 description: Check out Hyper Terminal and a few useful plugins offered by its community.
 published: 2022-03-17
 topics: [Terminal]
+coverDark: ./hyper-terminal-and-its-arsenal-of-plugins.dark.png
+coverLight: ./hyper-terminal-and-its-arsenal-of-plugins.light.png
 ---
 
 When it comes to terminals, I've worked hands on with solutions including Git Bash, ConEmu, and Terminus. One aspect I
