--- a/src/content/summarize-blog-posts-with-typescript-and-gpt.mdx
+++ b/src/content/summarize-blog-posts-with-typescript-and-gpt.mdx
@@ -4,6 +4,8 @@ description: Implement basic web scraping and leverage OpenAI's GPT to summarize
 published: 2023-05-27
 topics: [AI]
 repo: summarize-blog-posts-with-typescript-and-openais-gpt
+coverDark: ./summarize-blog-posts-with-typescript-and-gpt.dark.png
+coverLight: ./summarize-blog-posts-with-typescript-and-gpt.light.png
 ---
 
 Blog posts are a key component in learning new technologies accross the web. With [OpenAI's GPT][openai-gpt], we can
