--- a/src/content/tailwindcss-responsive-design-without-breakpoints.mdx
+++ b/src/content/tailwindcss-responsive-design-without-breakpoints.mdx
@@ -4,6 +4,8 @@ description: Solve bloated Tailwind CSS by implementing a fluid responsive desig
 published: 2022-09-17
 topics: [Tailwind CSS, CSS]
 repo: tailwindcss-fluid-responsive-design
+coverDark: ./tailwindcss-responsive-design-without-breakpoints.dark.png
+coverLight: ./tailwindcss-responsive-design-without-breakpoints.light.png
 ---
 
 Let's begin by looking at a common responsive design pattern in Tailwind CSS:
