--- a/src/content/developing-browser-extensions-with-nextjs.mdx
+++ b/src/content/developing-browser-extensions-with-nextjs.mdx
@@ -6,6 +6,8 @@ description:
 published: 2022-04-19
 topics: [Next.js]
 repo: demo-nextjs-browser-extension
+coverDark: ./developing-browser-extensions-with-nextjs.dark.png
+coverLight: ./developing-browser-extensions-with-nextjs.light.png
 ---
 
 import * as Tabs from '@/components/tabs';
