--- a/src/content/local-state-with-ngrx-and-apollo-angular.mdx
+++ b/src/content/local-state-with-ngrx-and-apollo-angular.mdx
@@ -4,6 +4,8 @@ description: An approach to managing local state in Angular when working with Gr
 published: 2021-05-01
 topics: [Angular, NgRx]
 repo: local-state-with-ngrx-and-apollo-angular
+coverDark: ./local-state-with-ngrx-and-apollo-angular.dark.png
+coverLight: ./local-state-with-ngrx-and-apollo-angular.light.png
 ---
 
 Within this article, I want to provide a helpful solution in Angular for managing local state when working with GraphQL.
